Fix text alignment on Record Not Found page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -70,6 +70,10 @@ section {
     h1 {
       margin-right: auto;
     }
+
+    p {
+      margin-right: auto;
+    }
   }
 }
 
